--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@
 
 # Ignore precompiled assets
 /public/assets
+app/assets/builds
+node_modules
 
 # Ignore yarn files
 /yarn-error.log
@@ -47,6 +49,7 @@ spec/examples.txt
 /spec/dummy/log/*.log
 /spec/dummy/storage/
 /spec/dummy/tmp/
+spec/dummy/public/assets
 
 # Ignore gem builds
 *.gem
